--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-icons": "^5.2.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.4.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "postcss": "^8",
